# notator-web

./: .gitignore  README.md  electron-builder.yml  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.functions.json  wrangler.toml
.github/workflows/: build-electron.yml
app/: globals.css  layout.tsx  page.tsx
app/community/: page.tsx
app/files/: page.tsx
app/player/: page.tsx
app/profile/: page.tsx
app/shared/: page.tsx
components/: Providers.tsx
components/auth/: LoginModal.tsx  UserMenu.tsx
components/midi/: MidiSettingsPanel.tsx
components/songs/: PublishModal.tsx  SongCard.tsx
components/tracks/: ChannelMapEditor.tsx  NotationTimeline.tsx  PianoRollEditor.tsx  TrackContextMenu.tsx  TrackList.tsx
components/transport/: TransportBar.tsx  TransportControlsPanel.tsx
components/ui/: AboutDialog.tsx  FileDropZone.tsx  MenuBar.tsx  MobileNav.tsx  SearchableSelect.tsx  TitleBar.tsx  UploadProgressOverlay.tsx
crates/son-parser/: Cargo.toml
crates/son-parser/src/: arrangement.rs  boundary.rs  events.rs  header.rs  lib.rs  midi_export.rs  patterns.rs  tracks.rs  types.rs  wasm.rs
crates/son-parser/tests/: integration.rs
crates/son-parser/tests/fixtures/: AUTOLOAD.SON  DEADNITE.SON  EXAMPLE.SON
docs/: SON_FORMAT.md
electron/: main.js  preload.js
functions/: _middleware.ts
functions/api/: stats.ts
functions/lib/: auth.ts  email.ts  types.ts
lib/auth/: AuthContext.tsx  api.ts
lib/midi/: gm-instruments.ts  (+5 more)
migrations/: 0001_initial.sql
st/: NOTATOR_ANNOTATED.md
types/: electron.d.ts  webaudiofont.d.ts
(+39 files in other folders)
